name:                 highway
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Game
build-type:           Simple
cabal-version:        >= 1.10

executable highway
  main-is:              Main.hs
  other-modules:
    Drums
  build-depends:
    base >= 4.7 && < 4.8
    , sdl2
    , sdl2-image
    , containers
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
