name:                 highway
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Game
build-type:           Simple
cabal-version:        >= 1.10

executable highway
  main-is:              Main.hs
  other-modules:
    Drums
    Load
  build-depends:
    base >= 4.7 && < 4.8
    , sdl2 == 1.1.2
    , sdl2-image == 0.1.1.0
    , containers
    , units-music
    , midi
    , non-negative
    , units
    , event-list
    , units-defs
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
